--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html, body {
     color: white;
 }
 #topbar{
-    background-color: navy;
+    background-color: #0B0B45;
     width: 100%;
     height: 7vw;
     display:flex;
@@ -16,7 +16,7 @@ html, body {
 }
 .sidebar {
     height: 49vw;
-    background-color: navy;
+    background-color: #0B0B45;
     width: 34%;
     display: flex;
     flex-direction: column;
@@ -81,7 +81,7 @@ html, body {
 #bottombar{
     height: 13vw;
     padding: 0%;
-    background-color: navy;
+    background-color: #0B0B45;
     display: flex;
     color:white;
     text-align: center;
